Format notebooks using nbqa (ruff/yapf)

--- a/docs/examples/duqmap.ipynb
+++ b/docs/examples/duqmap.ipynb
@@ -19,8 +19,9 @@
    },
    "outputs": [],
    "source": [
-    "from duqtools.api import duqmap, Run, Runs, ImasHandle, rebase_all_coords\n",
-    "import xarray as xr"
+    "import xarray as xr\n",
+    "\n",
+    "from duqtools.api import ImasHandle, Run, Runs, duqmap, rebase_all_coords"
    ]
   },
   {
@@ -121,8 +122,7 @@
    "outputs": [],
    "source": [
     "def extract_te(handle: ImasHandle):\n",
-    "    return handle.get_variables(['t_e','rho_tor_norm', 'time'])\n",
-    "    "
+    "    return handle.get_variables(['t_e', 'rho_tor_norm', 'time'])"
    ]
   },
   {
@@ -173,7 +173,7 @@
     }
    ],
    "source": [
-    "datasets = duqmap(extract_te, runs = runs)\n",
+    "datasets = duqmap(extract_te, runs=runs)\n",
     "datasets"
    ]
   },
@@ -643,7 +643,7 @@
    ],
    "source": [
     "datasets = rebase_all_coords(datasets, datasets[0])\n",
-    "dataset = xr.concat(datasets,dim='run')\n",
+    "dataset = xr.concat(datasets, dim='run')\n",
     "dataset['run'] = names\n",
     "dataset"
    ]
@@ -690,10 +690,7 @@
     }
    ],
    "source": [
-    "dataset['t_e'].isel(time=0).plot.line(\n",
-    "    x='rho_tor_norm',\n",
-    "    hue='run'\n",
-    ")"
+    "dataset['t_e'].isel(time=0).plot.line(x='rho_tor_norm', hue='run')"
    ]
   },
   {
