--- a/docs/examples/imas_handles.ipynb
+++ b/docs/examples/imas_handles.ipynb
@@ -224,7 +224,10 @@
     }
    ],
    "source": [
-    "handle = ImasHandle(user='/afs/eufus.eu/user/g/g2ssmee/public/imasdb', db='jet', shot=94875, run=8000)\n",
+    "handle = ImasHandle(user='/afs/eufus.eu/user/g/g2ssmee/public/imasdb',\n",
+    "                    db='jet',\n",
+    "                    shot=94875,\n",
+    "                    run=8000)\n",
     "print(handle.path())\n",
     "handle.exists()"
    ]
