--- a/docs/examples/xarray-2D.ipynb
+++ b/docs/examples/xarray-2D.ipynb
@@ -67,19 +67,16 @@
     "    Variable(name='dim1',\n",
     "             ids='equilibrium',\n",
     "             path='time_slice/*/profiles_2d/0/grid/dim1',\n",
-    "             dims=['time','$dim1']),\n",
+    "             dims=['time', '$dim1']),\n",
     "    Variable(name='dim2',\n",
     "             ids='equilibrium',\n",
     "             path='time_slice/*/profiles_2d/0/grid/dim2',\n",
-    "             dims=['time','$dim2']),\n",
+    "             dims=['time', '$dim2']),\n",
     "    Variable(name='psi',\n",
     "             ids='equilibrium',\n",
     "             path='time_slice/*/profiles_2d/0/psi',\n",
-    "             dims=['time','$dim1','$dim2']),\n",
-    "    Variable(name='time',\n",
-    "             ids='equilibrium',\n",
-    "             path='time',\n",
-    "             dims=['time']),\n",
+    "             dims=['time', '$dim1', '$dim2']),\n",
+    "    Variable(name='time', ids='equilibrium', path='time', dims=['time']),\n",
     ")"
    ]
   },
@@ -110,11 +107,8 @@
     "    Variable(name='psi',\n",
     "             ids='equilibrium',\n",
     "             path='time_slice/*/profiles_2d/0/psi',\n",
-    "             dims=['time','dim1','dim2']),\n",
-    "    Variable(name='time',\n",
-    "             ids='equilibrium',\n",
-    "             path='time',\n",
-    "             dims=['time']),\n",
+    "             dims=['time', 'dim1', 'dim2']),\n",
+    "    Variable(name='time', ids='equilibrium', path='time', dims=['time']),\n",
     ")"
    ]
   },
@@ -628,9 +622,7 @@
     "for dim in ('dim1', 'dim2'):\n",
     "    reference_grid = datasets[0][dim].data\n",
     "    datasets = [\n",
-    "        rebase_on_grid(ds, \n",
-    "                       coord_dim=dim, \n",
-    "                       new_coords=reference_grid)\n",
+    "        rebase_on_grid(ds, coord_dim=dim, new_coords=reference_grid)\n",
     "        for ds in datasets\n",
     "    ]"
    ]
@@ -654,10 +646,10 @@
     "\n",
     "_ = [\n",
     "    ds.interp({\n",
-    "        'dim1': np.linspace(2.0, 4.0, 51), \n",
+    "        'dim1': np.linspace(2.0, 4.0, 51),\n",
     "        'dim2': np.linspace(-1.5, 1.5, 51)\n",
-    "    }) \n",
-    "    for ds in datasets]"
+    "    }) for ds in datasets\n",
+    "]"
    ]
   },
   {
@@ -708,9 +700,7 @@
     "reference_time = datasets[0]['time'].data\n",
     "\n",
     "datasets = [\n",
-    "    rebase_on_time(ds, \n",
-    "                   time_dim='time', \n",
-    "                   new_coords=reference_time)\n",
+    "    rebase_on_time(ds, time_dim='time', new_coords=reference_time)\n",
     "    for ds in datasets\n",
     "]"
    ]
@@ -1262,7 +1252,7 @@
     }
    ],
    "source": [
-    "dataset['psi'].isel(time=[0,1,2,3]).plot(row='time', col='run')"
+    "dataset['psi'].isel(time=[0, 1, 2, 3]).plot(row='time', col='run')"
    ]
   },
   {
@@ -1303,7 +1293,7 @@
     }
    ],
    "source": [
-    "mean = dataset.mean(dim='run').isel(time=[0,1,2,3])\n",
+    "mean = dataset.mean(dim='run').isel(time=[0, 1, 2, 3])\n",
     "\n",
     "mean['psi'].plot(col='time')"
    ]
@@ -1344,7 +1334,7 @@
     }
    ],
    "source": [
-    "std = dataset.isel(time=[0,1,2,3]).std(dim='run')\n",
+    "std = dataset.isel(time=[0, 1, 2, 3]).std(dim='run')\n",
     "\n",
     "std['psi'].plot(col='time')"
    ]
