--- a/docs/examples/xarray-ions.ipynb
+++ b/docs/examples/xarray-ions.ipynb
@@ -65,15 +65,11 @@
    "source": [
     "from duqtools.api import Variable\n",
     "\n",
-    "variables = (\n",
-    "    Variable(name='ion_temperature',\n",
-    "             ids='core_profiles',\n",
-    "             path='profiles_1d/*/ion/*/temperature',\n",
-    "             dims=['time','ion','$rho_tor_norm']),\n",
-    "    't_i_ave',\n",
-    "    'rho_tor_norm',\n",
-    "    'time'\n",
-    ")"
+    "variables = (Variable(name='ion_temperature',\n",
+    "                      ids='core_profiles',\n",
+    "                      path='profiles_1d/*/ion/*/temperature',\n",
+    "                      dims=['time', 'ion', '$rho_tor_norm']), 't_i_ave',\n",
+    "             'rho_tor_norm', 'time')"
    ]
   },
   {
@@ -1184,13 +1180,11 @@
     }
    ],
    "source": [
-    "dataset.isel(time=50).plot.scatter(\n",
-    "    'rho_tor_norm', \n",
-    "    'ion_temperature',       \n",
-    "    hue='run', \n",
-    "    col='ion', \n",
-    "    marker='.'\n",
-    ")"
+    "dataset.isel(time=50).plot.scatter('rho_tor_norm',\n",
+    "                                   'ion_temperature',\n",
+    "                                   hue='run',\n",
+    "                                   col='ion',\n",
+    "                                   marker='.')"
    ]
   },
   {
@@ -1223,8 +1217,8 @@
    "source": [
     "dataset['ion_temperature'].isel(time=10).plot.line(\n",
     "    x='rho_tor_norm',\n",
-    "    hue='run', \n",
-    "    col='ion', \n",
+    "    hue='run',\n",
+    "    col='ion',\n",
     ")"
    ]
   },
@@ -1313,11 +1307,9 @@
    "source": [
     "from duqtools.api import alt_line_chart\n",
     "\n",
-    "chart = alt_line_chart(\n",
-    "    dataset.isel(time=[0,1,2,3]), \n",
-    "    x='rho_tor_norm', \n",
-    "    y='ion_temperature'\n",
-    ")\n",
+    "chart = alt_line_chart(dataset.isel(time=[0, 1, 2, 3]),\n",
+    "                       x='rho_tor_norm',\n",
+    "                       y='ion_temperature')\n",
     "chart"
    ]
   },
@@ -1406,11 +1398,9 @@
    "source": [
     "from duqtools.api import alt_errorband_chart\n",
     "\n",
-    "chart = alt_errorband_chart(\n",
-    "    dataset.isel(time=[0,1,2,3]), \n",
-    "    x='rho_tor_norm', \n",
-    "    y='ion_temperature'\n",
-    ")\n",
+    "chart = alt_errorband_chart(dataset.isel(time=[0, 1, 2, 3]),\n",
+    "                            x='rho_tor_norm',\n",
+    "                            y='ion_temperature')\n",
     "chart"
    ]
   },
@@ -1453,11 +1443,11 @@
     }
    ],
    "source": [
-    "mean = dataset.mean(dim='run').mean(dim='ion').isel(time=[0,1])\n",
+    "mean = dataset.mean(dim='run').mean(dim='ion').isel(time=[0, 1])\n",
     "\n",
     "mean['ion_temperature'].plot.line(\n",
     "    x='rho_tor_norm',\n",
-    "    hue='time', \n",
+    "    hue='time',\n",
     ")"
    ]
   },
