--- a/docs/examples/xarray.ipynb
+++ b/docs/examples/xarray.ipynb
@@ -21,6 +21,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import sys\n",
+    "\n",
     "sys.version"
    ]
   },
@@ -1235,7 +1236,7 @@
     }
    ],
    "source": [
-    "handle.get_all_variables(extra_variables=[],ids='core_profiles')"
+    "handle.get_all_variables(extra_variables=[], ids='core_profiles')"
    ]
   },
   {
@@ -1706,19 +1707,16 @@
     "    Variable(name='zeff',\n",
     "             ids='core_profiles',\n",
     "             path='profiles_1d/*/zeff',\n",
-    "             dims=['time','$rho_tor_norm']),\n",
+    "             dims=['time', '$rho_tor_norm']),\n",
     "    Variable(name='t_i_ave',\n",
     "             ids='core_profiles',\n",
     "             path='profiles_1d/*/t_i_average',\n",
-    "             dims=['time','$rho_tor_norm']),\n",
+    "             dims=['time', '$rho_tor_norm']),\n",
     "    Variable(name='rho_tor_norm',\n",
     "             ids='core_profiles',\n",
     "             path='profiles_1d/*/grid/rho_tor_norm',\n",
-    "             dims=['time','$rho_tor_norm']),\n",
-    "    Variable(name='time',\n",
-    "             ids='core_profiles',\n",
-    "             path='time',\n",
-    "             dims=['time']),\n",
+    "             dims=['time', '$rho_tor_norm']),\n",
+    "    Variable(name='time', ids='core_profiles', path='time', dims=['time']),\n",
     ")\n",
     "\n",
     "ds = handle.get_variables(variable_models)\n",
@@ -1749,9 +1747,9 @@
     "datasets = tuple(handle.get_variables(variables) for handle in handles)\n",
     "\n",
     "datasets = standardize_grid_and_time(\n",
-    "    datasets, \n",
-    "    grid_var='rho_tor_norm', \n",
-    "    time_var='time', \n",
+    "    datasets,\n",
+    "    grid_var='rho_tor_norm',\n",
+    "    time_var='time',\n",
     "    reference_dataset=0,\n",
     ")"
    ]
@@ -1784,9 +1782,7 @@
     "reference_grid = datasets2[0]['rho_tor_norm'].data\n",
     "\n",
     "datasets2 = [\n",
-    "    rebase_on_grid(ds, \n",
-    "                   coord_dim='rho_tor_norm', \n",
-    "                   new_coords=reference_grid)\n",
+    "    rebase_on_grid(ds, coord_dim='rho_tor_norm', new_coords=reference_grid)\n",
     "    for ds in datasets2\n",
     "]"
    ]
@@ -1841,9 +1837,7 @@
     "reference_time = datasets2[0]['time'].data\n",
     "\n",
     "datasets2 = [\n",
-    "    rebase_on_time(ds, \n",
-    "                   time_dim='time', \n",
-    "                   new_coords=reference_time)\n",
+    "    rebase_on_time(ds, time_dim='time', new_coords=reference_time)\n",
     "    for ds in datasets2\n",
     "]"
    ]
@@ -2421,13 +2415,11 @@
     }
    ],
    "source": [
-    "dataset.isel(time=[0,1,2,3]).plot.scatter(\n",
-    "    'rho_tor_norm', \n",
-    "    't_i_ave',       \n",
-    "    hue='run', \n",
-    "    col='time', \n",
-    "    marker='.'\n",
-    ")"
+    "dataset.isel(time=[0, 1, 2, 3]).plot.scatter('rho_tor_norm',\n",
+    "                                             't_i_ave',\n",
+    "                                             hue='run',\n",
+    "                                             col='time',\n",
+    "                                             marker='.')"
    ]
   },
   {
@@ -2458,10 +2450,10 @@
     }
    ],
    "source": [
-    "dataset['t_i_ave'].isel(time=[0,1,2,3]).plot.line(\n",
+    "dataset['t_i_ave'].isel(time=[0, 1, 2, 3]).plot.line(\n",
     "    x='rho_tor_norm',\n",
-    "    hue='run', \n",
-    "    col='time', \n",
+    "    hue='run',\n",
+    "    col='time',\n",
     ")"
    ]
   },
@@ -2550,11 +2542,9 @@
    "source": [
     "from duqtools.api import alt_line_chart\n",
     "\n",
-    "chart = alt_line_chart(\n",
-    "    dataset.isel(time=[0,1,2,3]), \n",
-    "    x='rho_tor_norm', \n",
-    "    y='t_i_ave'\n",
-    ")\n",
+    "chart = alt_line_chart(dataset.isel(time=[0, 1, 2, 3]),\n",
+    "                       x='rho_tor_norm',\n",
+    "                       y='t_i_ave')\n",
     "chart"
    ]
   },
@@ -2643,11 +2633,9 @@
    "source": [
     "from duqtools.api import alt_errorband_chart\n",
     "\n",
-    "chart = alt_errorband_chart(\n",
-    "    dataset.isel(time=[0,1,2,3]), \n",
-    "    x='rho_tor_norm', \n",
-    "    y='t_i_ave'\n",
-    ")\n",
+    "chart = alt_errorband_chart(dataset.isel(time=[0, 1, 2, 3]),\n",
+    "                            x='rho_tor_norm',\n",
+    "                            y='t_i_ave')\n",
     "chart"
    ]
   },
@@ -2700,9 +2688,9 @@
    "source": [
     "mean = dataset.mean(dim='run')\n",
     "\n",
-    "mean['t_i_ave'].isel(time=[0,1,2,3]).plot.line(\n",
+    "mean['t_i_ave'].isel(time=[0, 1, 2, 3]).plot.line(\n",
     "    x='rho_tor_norm',\n",
-    "    hue='time', \n",
+    "    hue='time',\n",
     ")"
    ]
   },
@@ -2747,9 +2735,9 @@
    "source": [
     "std = dataset.std(dim='run')\n",
     "\n",
-    "std['t_i_ave'].isel(time=[0,1,2,3]).plot.line(\n",
+    "std['t_i_ave'].isel(time=[0, 1, 2, 3]).plot.line(\n",
     "    x='rho_tor_norm',\n",
-    "    hue='time', \n",
+    "    hue='time',\n",
     ")"
    ]
   },
@@ -2843,7 +2831,7 @@
     "from duqtools.api import alt_line_chart\n",
     "\n",
     "chart = alt_line_chart(\n",
-    "    dataset.isel(time=[0,1,2,3]),\n",
+    "    dataset.isel(time=[0, 1, 2, 3]),\n",
     "    x='rho_tor_norm',\n",
     "    y='t_i_ave',\n",
     ")\n",
@@ -2936,7 +2924,7 @@
     "from duqtools.api import alt_errorband_chart\n",
     "\n",
     "chart = alt_errorband_chart(\n",
-    "    dataset.isel(time=[0,1,2,3]),\n",
+    "    dataset.isel(time=[0, 1, 2, 3]),\n",
     "    x='rho_tor_norm',\n",
     "    y='t_i_ave',\n",
     ")\n",
