--- a/docs/examples/duqtools_on_prominence.ipynb
+++ b/docs/examples/duqtools_on_prominence.ipynb
@@ -8,11 +8,10 @@
    "outputs": [],
    "source": [
     "import atexit\n",
-    "from contextlib import contextmanager\n",
     "import os\n",
     "import shutil\n",
-    "import signal\n",
     "import stat\n",
+    "\n",
     "import docker"
    ]
   },
@@ -55,10 +54,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shutil.rmtree('./example',ignore_errors=True)\n",
+    "shutil.rmtree('./example', ignore_errors=True)\n",
     "os.mkdir('example')\n",
     "# We assume that the duqtools source is available and that we are in the docs/examples folder\n",
-    "shutil.copytree('../../tests/test_data/template_model','example/template');"
+    "shutil.copytree('../../tests/test_data/template_model', 'example/template');"
    ]
   },
   {
@@ -69,7 +68,7 @@
    "outputs": [],
    "source": [
     "# Some imas data, substitute with your own, as we are not allowed to provide it\n",
-    "shutil.copytree('../../../containerized_runs/imasdb','example/imasdb');"
+    "shutil.copytree('../../../containerized_runs/imasdb', 'example/imasdb');"
    ]
   },
   {
@@ -209,8 +208,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "niceprint = lambda s: print(str(s.output,\"utf-8\"))\n",
-    "run_inside = lambda container, cmd: container.exec_run(\" \".join(['/example/entry.sh',cmd]))"
+    "def niceprint(s):\n",
+    "    return print(str(s.output, 'utf-8'))\n",
+    "\n",
+    "\n",
+    "def run_inside(container, cmd):\n",
+    "    return container.exec_run(' '.join(['/example/entry.sh', cmd]))"
    ]
   },
   {
@@ -227,13 +230,13 @@
     "    pass\n",
     "\n",
     "client = docker.from_env()\n",
-    "container = client.containers.run('jintrac-imas:latest', \n",
-    "                                  working_dir=\"/example\", \n",
+    "container = client.containers.run('jintrac-imas:latest',\n",
+    "                                  working_dir=\"/example\",\n",
     "                                  user=os.getuid(),\n",
-    "                                  detach=True, \n",
+    "                                  detach=True,\n",
     "                                  entrypoint=\"/example/entry.sh\",\n",
     "                                  command=\"tail -f /dev/null\",\n",
-    "                                  volumes=[os.getcwd()+\"/example:/example\"],\n",
+    "                                  volumes=[os.getcwd() + \"/example:/example\"],\n",
     "                                  auto_remove=True)\n",
     "atexit.register(lambda: container.stop(timeout=0));"
    ]
@@ -245,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_inside(container,'python3 -m venv .venv');"
+    "run_inside(container, 'python3 -m venv .venv');"
    ]
   },
   {
@@ -265,7 +268,7 @@
     }
    ],
    "source": [
-    "niceprint(run_inside(container,'python3 -m pip install duqtools -q'))"
+    "niceprint(run_inside(container, 'python3 -m pip install duqtools -q'))"
    ]
   },
   {
@@ -304,7 +307,7 @@
     }
    ],
    "source": [
-    "niceprint(run_inside(container,'duqtools create --force --yes')) "
+    "niceprint(run_inside(container, 'duqtools create --force --yes'))"
    ]
   },
   {
