--- a/docs/examples/demo_single_run.ipynb
+++ b/docs/examples/demo_single_run.ipynb
@@ -735,6 +735,20 @@
       "    db: {{ handle.db }}\r\n",
       "    shot: {{ handle.shot }}\r\n",
       "    run: {{ handle.run }}\r\n",
+      "  operations:\r\n",
+      "    - variable: major_radius\r\n",
+      "      operator: copyto\r\n",
+      "      {# Convert units from IDS (m) to Jetto.jset (cm) -#}\r\n",
+      "      value: {{ (variables.major_radius * 100) | round(4) }}\r\n",
+      "    - variable: b_field\r\n",
+      "      operator: copyto\r\n",
+      "      value: {{ variables.b_field | round(4) }}\r\n",
+      "    - variable: t_start\r\n",
+      "      operator: copyto\r\n",
+      "      value: {{ variables.t_start | round(4) }}\r\n",
+      "    - variable: t_end\r\n",
+      "      operator: copyto\r\n",
+      "      value: {{ (variables.t_start + 0.01) | round(4) }}\r\n",
       "  sampler:\r\n",
       "    method: latin-hypercube\r\n",
       "    n_samples: 25\r\n",
@@ -745,19 +759,6 @@
       "    - variable: t_e\r\n",
       "      operator: multiply\r\n",
       "      values: [0.8, 0.9, 1.0, 1.1, 1.2]\r\n",
-      "    - variable: major_radius\r\n",
-      "      operator: copyto\r\n",
-      "      {# Convert units from IDS (m) to Jetto.jset (cm) -#}\r\n",
-      "      values: [ {{ (variables.major_radius * 100) | round(4) }} ]\r\n",
-      "    - variable: b_field\r\n",
-      "      operator: copyto\r\n",
-      "      values: [ {{ variables.b_field | round(4) }} ]\r\n",
-      "    - variable: t_start\r\n",
-      "      operator: copyto\r\n",
-      "      values: [ {{ variables.t_start | round(4) }} ]\r\n",
-      "    - variable: t_end\r\n",
-      "      operator: copyto\r\n",
-      "      values: [ {{ (variables.t_start + 0.01) | round(4) }} ]\r\n",
       "system: jetto-v220922"
      ]
     }
