Update api for create and fix tests/notebook

--- a/docs/examples/create_api.ipynb
+++ b/docs/examples/create_api.ipynb
@@ -50,9 +50,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[33m16:33:05 [WARNING] Python module 'omas' not found. Submodule 'jams' needs it @jams.py:14\u001b[0m\n",
+      "\u001b[33m13:45:22 [WARNING] Python module 'omas' not found. Submodule 'jams' needs it @jams.py:14\u001b[0m\n",
       "Python module 'omas' not found. Submodule 'jams' needs it\n",
-      "\u001b[33m16:33:05 [WARNING] Python module 'netCDF4' not found. Submodule 'transp' needs it @transp.py:25\u001b[0m\n",
+      "\u001b[33m13:45:22 [WARNING] Python module 'netCDF4' not found. Submodule 'transp' needs it @transp.py:25\u001b[0m\n",
       "Python module 'netCDF4' not found. Submodule 'transp' needs it\n"
      ]
     }
@@ -110,7 +110,7 @@
    "id": "0ebabe97",
    "metadata": {},
    "source": [
-    "Running `create` will create a new run from the template, copy over the template data, and apply the operations to the data. This will return a `job` and `run` object."
+    "Running `create` will create a new run from the template, copy over the template data, and apply the operations to the data. This will return a dictionary with jobs and runs (`Job` and `Run` objects)."
    ]
   },
   {
@@ -138,7 +138,8 @@
     }
    ],
    "source": [
-    "job, run = create(config)"
+    "jobs_and_runs = create(config)\n",
+    "job, run = jobs_and_runs['run_0000']"
    ]
   },
   {
@@ -271,7 +272,7 @@
      "output_type": "stream",
      "text": [
       "submitting script via slurm ['sbatch', '/gss_efgw_work/work/g2ssmee/jetto/runs/duqduq/data_123/run_0000/.llcmd']\n",
-      "submission returned: b'Submitted batch job 235793\\n'\n"
+      "submission returned: b'Submitted batch job 237647\\n'\n"
      ]
     }
    ],
@@ -301,39 +302,41 @@
      "text": [
       "JobStatus.NOSTATUS\n",
       "      0.00 - no status\n",
-      "      1.06 - no status\n",
-      "      2.06 - no status\n",
-      "      3.06 - no status\n",
-      "      4.06 - no status\n",
-      "      5.06 - no status\n",
-      "      6.06 - no status\n",
-      "      7.07 - no status\n",
-      "      8.17 - no status\n",
-      "      9.68 - no status\n",
-      "     10.83 - no status\n",
-      "     12.14 - running\n",
-      "     13.14 - running\n",
-      "     14.14 - running\n",
-      "     15.14 - running\n",
-      "     16.14 - running\n",
-      "     17.14 - running\n",
-      "     18.14 - running\n",
-      "     19.15 - running\n",
-      "     20.15 - running\n",
-      "     21.15 - running\n",
-      "     22.15 - running\n",
-      "     23.15 - running\n",
-      "     24.15 - running\n",
-      "     25.15 - running\n",
-      "     26.16 - running\n",
-      "     27.16 - running\n",
-      "     28.16 - running\n",
-      "     29.16 - running\n",
-      "     30.16 - running\n",
-      "     31.16 - running\n",
-      "     32.17 - running\n",
-      "     33.17 - running\n",
-      "     34.17 - running\n",
+      "      1.00 - no status\n",
+      "      2.14 - no status\n",
+      "      3.14 - no status\n",
+      "      4.14 - no status\n",
+      "      5.14 - no status\n",
+      "      6.15 - no status\n",
+      "      7.15 - no status\n",
+      "      8.15 - no status\n",
+      "      9.15 - no status\n",
+      "     11.12 - no status\n",
+      "     13.23 - no status\n",
+      "     15.03 - running\n",
+      "     16.17 - running\n",
+      "     17.17 - running\n",
+      "     18.17 - running\n",
+      "     19.18 - running\n",
+      "     20.18 - running\n",
+      "     21.18 - running\n",
+      "     22.18 - running\n",
+      "     23.18 - running\n",
+      "     24.18 - running\n",
+      "     25.19 - running\n",
+      "     26.19 - running\n",
+      "     27.19 - running\n",
+      "     28.19 - running\n",
+      "     29.19 - running\n",
+      "     30.19 - running\n",
+      "     31.20 - running\n",
+      "     32.20 - running\n",
+      "     33.20 - running\n",
+      "     34.20 - running\n",
+      "     35.20 - running\n",
+      "     36.20 - running\n",
+      "     37.20 - running\n",
+      "     38.21 - running\n",
       "JobStatus.COMPLETED\n"
      ]
     }
@@ -399,7 +402,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x2aefd2f4b640>"
+       "<matplotlib.collections.PathCollection at 0x2b93510eb3a0>"
       ]
      },
      "execution_count": 9,
