Fix references to system: jetto

--- a/docs/examples/demo_single_run.ipynb
+++ b/docs/examples/demo_single_run.ipynb
@@ -759,7 +759,8 @@
       "    - variable: t_e\r\n",
       "      operator: multiply\r\n",
       "      values: [0.8, 0.9, 1.0, 1.1, 1.2]\r\n",
-      "system: jetto-v220922"
+      "system:\r\n",
+      "  name: jetto-v220922"
      ]
     }
    ],
@@ -857,7 +858,8 @@
       "    - variable: t_end\r\n",
       "      operator: copyto\r\n",
       "      values: [ 45.76 ]\r\n",
-      "system: jetto-v220922"
+      "system:\r\n",
+      "  name: jetto-v220922"
      ]
     }
    ],
