--- a/docs/examples/duqtools_in_docker.ipynb
+++ b/docs/examples/duqtools_in_docker.ipynb
@@ -107,7 +107,8 @@
    "source": [
     "# A simple configuration file for duqtools\n",
     "with open(\"example/duqtools.yaml\", \"w\") as f:\n",
-    "    f.write(\"\"\"system: jetto\n",
+    "    f.write(\"\"\"system:\n",
+    "  name: jetto\n",
     "create:\n",
     "  template: ./template #TODO edit to directory where initial run is stored\n",
     "  template_data:\n",
