--- a/docs/examples/demo_lsv_run.ipynb
+++ b/docs/examples/demo_lsv_run.ipynb
@@ -183,7 +183,8 @@
       "    - variable: t_e\r\n",
       "      operator: multiply\r\n",
       "      values: [0.8, 1.0, 1.2]\r\n",
-      "system: jetto-v220922"
+      "system:\r\n",
+      "  name: jetto-v220922"
      ]
     }
    ],
@@ -335,7 +336,8 @@
       "    - variable: t_end\r\n",
       "      operator: copyto\r\n",
       "      values: [ 3.875 ]\r\n",
-      "system: jetto-v220922"
+      "system:\r\n",
+      "  name: jetto-v220922"
      ]
     }
    ],
