--- a/notebooks/demo_single_run.ipynb
+++ b/notebooks/demo_single_run.ipynb
@@ -25,11 +25,13 @@
    "outputs": [],
    "source": [
     "from pathlib import Path\n",
+    "import os\n",
     "\n",
     "duqtools_dir = Path('/afs/eufus.eu/user/g/g2ssmee/duqtools_demo')\n",
     "run_dir = Path('/afs/eufus.eu/user/g/g2ssmee/jetto_runs/duqtools_demo')\n",
     "\n",
-    "import os\n",
+    "assert not duqtools_dir.exists()\n",
+    "duqtools_dir.mkdir()\n",
     "\n",
     "os.chdir(duqtools_dir)"
    ]
